add the three types of triangles with image in the homepage

--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,14 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <body>
     <h1 id="font">TRIANGLES</h1>
+    <p>There are three types of triangles:-<br>
+      <ol>
+        <li>Equilateral triangles</li>
+        <img src="image/equilateral.png">
+        <li>Isoscles triangles</li>
+        <img src="image/isoscles.png">
+        <li>Scalene triangles</li>
+        <img src="image/scalene.jpg">
 
   </body>
 </html>
