style the triangle defination paragraph

--- a/homepage.html
+++ b/homepage.html
@@ -7,14 +7,25 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <body>
     <h1 id="font">TRIANGLES</h1>
+    <div class="tri">
     <p>There are three types of triangles:-<br>
       <ol>
-        <li>Equilateral triangles</li>
+        <li class="upper">Equilateral triangles <br>
+        (All sides are equal.)
+        </li>
         <img src="image/equilateral.png">
-        <li>Isoscles triangles</li>
+        <li class="upper">Isoscles triangles <br>
+        (Two sides are equal.)
+        </li>
         <img src="image/isoscles.png">
-        <li>Scalene triangles</li>
+        <li class="upper">Scalene triangles <br>
+        (None of the sides are equal.)
+        </li>
         <img src="image/scalene.jpg">
+    <p>
+      <button type="button" name="button">TRY A TRIANGLE HERE</button>
+    </p>
+  </div>
 
   </body>
 </html>
