add the try a trianle button

--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
         </li>
         <img src="image/scalene.jpg">
     <p>
-      <button type="button" name="button">TRY A TRIANGLE HERE</button>
+      <button type="button" name="button"><strong>TRY A TRIANGLE HERE</strong></button>
     </p>
   </div>
 
