float the try a triangle button

--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,9 @@
         </li>
         <img src="image/scalene.jpg">
     <p>
+      <div class="tributton">
       <button type="button" name="button"><strong>TRY A TRIANGLE HERE</strong></button>
+      </div>
     </p>
   </div>
 
