--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
     <div class="tri">
   <body>
     <h1 id="font">TRIANGLES</h1>
-    <p>There are three types of triangles:-<br>
+    <p id="p">There are three types of triangles:-<br>
       <ol>
         <li class="upper">Equilateral triangles <br>
         (All sides are equal.)
@@ -19,7 +19,7 @@
         </li>
         <img src="image/isoscles.png">
         <div class="tributton">
-        <button type="button" name="button"><strong>TRY A TRIANGLE HERE</strong></button>
+        <button type="button" name="button"><strong><a href="index.html">TRY A TRIANGLE HERE!!</strong></button>
         </div>
         <li class="upper">Scalene triangles <br>
         (None of the sides are equal.)
