--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
  <div class="bkground">
 <body>
+  <h1>TRY OUT YOUR TRIANGLE</h1>
+  <p><input type="text" placeholder="Enter side A">
+     <input type="text" placeholders="Enter side B">
+     <input type="text" placeholder="Enter side C">    
 </body>
-<button type="button" class="btn" onclick="track()"><strong>TRACK</strong></button>
-<div class="answer" id="answer">
-
-</div>
-</div>
+ </div>
 </html>
