--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>triangle-trucker</title>
+  <head>
+    <title>Homepage
+    </title>
+  </head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script type="text/javascript" src="js/scripts.js">
-  </script>
-</head>
- <div class="bkground">
-<body>
-  <h1>TRY OUT YOUR TRIANGLE</h1>
-  <p><input type="text" placeholder="Enter side A">
-     <input type="text" placeholders="Enter side B">
-     <input type="text" placeholder="Enter side C">    
-</body>
- </div>
+    <div class="tri">
+  <body>
+    <h1 id="font">TRIANGLES</h1>
+    <p id="p">There are three types of triangles:-<br>
+      <ol>
+        <li class="upper">Equilateral triangles <br>
+        (All sides are equal.)
+        </li>
+        <img src="image/equilateral.png">
+        <li class="upper">Isoscles triangles <br>
+        (Two sides are equal.)
+        </li>
+        <img src="image/isoscles.png">
+        <div class="tributton">
+        <button type="button" name="button"><strong><a href="try.html">TRY A TRIANGLE HERE!!</strong></button>
+        </div>
+        <li class="upper">Scalene triangles <br>
+        (None of the sides are equal.)
+
+        </li>
+        <img src="image/scalene.jpg">
+    <p>
+
+
+
+    </p>
+
+
+  </body>
+    </div>
 </html>
