add BDD in the README.md

--- a/try.html
+++ b/try.html
@@ -10,9 +10,9 @@
 <body>
   <h1 id="h1">TRY OUT YOUR TRIANGLE</h1>
   <div class="body">
-  <p><input class="input"type="text" placeholder="Enter side A"><br><br>
-     <input class="input"type="text" placeholder="Enter side B"><br><br>
-     <input class="input"type="text" placeholder="Enter side C"><br><br>
+  <p><input class="input"type="text" placeholder="Enter side A" id="a"><br><br>
+     <input class="input"type="text" placeholder="Enter side B" id="b"><br><br>
+     <input class="input"type="text" placeholder="Enter side C" id="c"><br><br>
      <button id="button"stype="button" name="button"><strong>TRY OUT!</strong></button>
    </div>
 </body>
