define function tracker

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homepage
-    </title>
+    <title>Triangles</title>
   </head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
     <div class="tri">
-  <body>
+  <body align="center">
     <h1 id="font">TRIANGLES</h1>
+    <button type="button" name="button"><strong><a href="try.html">TRY A TRIANGLE HERE!!</strong></button>
     <p id="p">There are three types of triangles:-<br>
       <ol>
         <li class="upper">Equilateral triangles <br>
@@ -19,7 +19,6 @@
         </li>
         <img src="image/isoscles.png">
         <div class="tributton">
-        <button type="button" name="button"><strong><a href="try.html">TRY A TRIANGLE HERE!!</strong></button>
         </div>
         <li class="upper">Scalene triangles <br>
         (None of the sides are equal.)
