--- a/try.html
+++ b/try.html
@@ -10,10 +10,15 @@
 <body>
   <h1 id="h1">TRY OUT YOUR TRIANGLE</h1>
   <div class="body">
-  <p><input class="input"type="text" placeholder="Enter side A" id="a"><br><br>
+
+     <input class="input"type="text" placeholder="Enter side A" id="a"><br><br>
      <input class="input"type="text" placeholder="Enter side B" id="b"><br><br>
      <input class="input"type="text" placeholder="Enter side C" id="c"><br><br>
-     <button id="button"stype="button" name="button"><strong>TRY OUT!</strong></button>
+       <p id="alert"></p>
+       <img src="image/no.gif" alt="icon" id="no">
+       <img src="image/no.gif" alt="icon" id="iso">
+       <img src="image/no.gif" alt="icon" id="equi">
+     <button id="button" type="button" onclick="tracker()"><strong>TRY OUT!</strong></button>
    </div>
 </body>
  </div>
